--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TwitterTest</title>
+    <title>Twitter-Test</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,21 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary ">
+      <a class="navbar-brand" href="#">Twitter-Test</a>
+      <% if user_signed_in? %>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <span class="navbar-text color-white">
+            <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+          </span>
+        </div>
+      <% end -%>
+    </nav>
+    <div class="body-content">
+      <%= yield %>
+    </div>   
   </body>
 </html>
