--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,3 +1,12 @@
+body a {
+	color: black;
+}
+
+body a:hover
+{ 
+ text-decoration:none ; 
+} 
+
 .body-content{
 	max-width: 1048px;
 	margin: 30px auto;
@@ -29,20 +38,33 @@
 }
 
 .card.comment, .card.new-comment{
-	min-height: 120px;
 	margin: 5px 10px;
+	color: black;
+	min-height: 150px;
 }
 
-.card.new-comment{
-	min-height: 150px;
-	margin: 5px 10px;
+.card-info{
+	 display:flex; 
+	 justify-content:space-between; 
+	 align-items:baseline;
+	 margin-left: 15px;
+	 margin-right: 15px;
 }
+
 
 .card.comment{
-	min-height: 120px;
-	margin: 5px 10px;
+	text-decoration: none;
+	color: black;
 }
 
 .card.comment:hover{
 	border-color: #007bff;
+}
+
+.card-text{
+	min-height: 50px;
+}
+
+.counter{
+	font-size: 12px;
 }
