--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,11 +3,15 @@
     <%= form_with(model: comment, local: true) do |f| %>
       <div class="form-group">
         <%= f.text_area :body, autofocus: true, class: "form-control" %>
+        <div class="counter"><span id="count">0</span>/140</div>
       </div>
 
+      <%= f.hidden_field :parent_id %>
+
       <div class="actions">
-        <%= f.submit "Nuevo comentario", class: "btn btn-primary btn-block"%>
+        <%= f.submit "Nuevo comentario", id:"commit", class: "btn btn-primary btn-block", disabled: true %>
       </div>
+
     <% end %>
   </div>
 </div>
