--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,10 @@
+<%= devise_error_messages! %>
+
 <div class="card session">
   <div class="card-body">
     <h2>Nuevo Registro</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= devise_error_messages! %>
 
         <div class="form-group">
           <%= f.label :nick %><br />
@@ -12,7 +13,7 @@
 
         <div class="form-group">
           <%= f.label :email %><br />
-          <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
+          <%= f.email_field :email, class: "form-control" %>
         </div>
 
         <div class="form-group">
